<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class MasterPostalCode extends Model
{
    protected $guarded = ['id'];
}
