<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class MasterSubdistrict extends Model
{
    protected $guarded = ['id'];
}
